# confguru

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg
confguru/: base.py  guru.py
confguru/backends/: __init__.py  zookeeper.py
doc/: Makefile  make.bat
doc/source/: backends.rst  conf.py  guru.rst  index.rst
doc/source/backends/: zookeeper.rst
