[metadata]
name = confguru
author = Di Xu
author_email = stephenhsu90@gmail.com
summary = A common client/library to interact with various configuration backends
description-file = README.rst
keywords =
    confguru
    configuration
license = Apache License, Version 2.0
home-page = https://github.com/KuraudoTama/confguru/
classifier =
    Development Status :: 2 - Pre-Alpha
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[pbr]
warnerrors = True

[files]
packages = confguru

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html,man,linkcheck

[bdist_wheel]
universal=1
